# azul

./: .gitignore  .pre-commit-config.yaml  AzulCPU.py  AzulGame.py  LICENSE  README  README.md  azul.py  pyproject.toml  results.json
src/azul/: __init__.py  analysis.py  analyze_results.py  benchmark_ratings.py  cpu.py  display.py  elo.py  game.py  game_logic.py  main.py
src/azul/models/: __init__.py  player.py  source.py  tile.py
src/azul/rating_systems/: __init__.py  base.py  elo.py  glicko2.py  trueskill.py
tests/: conftest.py  test_ai.py  test_game.py  test_game_logic.py
