[project]
name = "azul"
version = "0.1.0"
description = "Implementation of the Azul board game"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Pablo Bernabeu", email = "pbernabeuperez@gmail.com" }
]
keywords = ["game", "azul", "board-game"]
dependencies = [
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=8.3.4",
    "trueskill>=0.4.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "seaborn>=0.13.2",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src/azul --cov-report=html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
